--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bordered_text: ^2.0.0
   intl: ^0.18.1
   provider: ^6.0.5
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
