--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.0.5
   carousel_slider: ^4.2.1
+  connectivity: ^3.0.6
+  connectivity_plus: ^4.0.2
+  internet_connection_checker: ^1.0.0+1
+
 
 dev_dependencies:
   flutter_test:
